fix scrollbar width on calendar

--- a/CSS/eventCalendar.css
+++ b/CSS/eventCalendar.css
@@ -145,6 +145,7 @@
     gap: 20px;
     max-width: 350px;
     overflow-y: auto;
+    scrollbar-width: none;
 }
 
 .calendar-widget {
